--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   animate_do: ^2.1.0
   flutter_rating_bar: ^4.0.1
   url_launcher: ^6.1.4
+  flutter_native_splash: ^2.2.4
 
   # Utils Dependencies
   dio: ^4.0.6
@@ -38,6 +39,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: '^0.9.2'
 
 flutter:
   uses-material-design: true
@@ -45,6 +47,7 @@ flutter:
   assets:
     - assets/i18n/
     - assets/icons/
+    - assets/images/
 
   fonts:
     - family: Montserrat
@@ -59,3 +62,14 @@ flutter:
           weight: 600
         - asset: assets/fonts/Montserrat-Bold.ttf
           weight: 700
+
+flutter_native_splash:
+  background_image: assets/images/splash_image.png
+  android_12:
+    background_image: assets/images/splash_image.png
+  fullscreen: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/images/launcher_icon.png'
